...
                ),

                const SizedBox(height: 36),

                // Welcome text Left Aligned
                const Text(
                  'Descubre moda que se adapta a ti',
                  style: TextStyle(
                    fontSize: 32,
                    fontWeight: FontWeight.bold,
                    color: Color(0xFF1C1B1F),
                    height: 1.25,
                    letterSpacing: -0.5,
...
                        elevation: 0,
                      ),
                      child: const Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          Text(
                            'Siguiente',
                            style: TextStyle(
                              fontSize: 16,
                              fontWeight: FontWeight.bold,
                            ),
                          ),
                          SizedBox(width: 8),
...
